--- a/themes/omid-dev/assets/css/common/resume.css
+++ b/themes/omid-dev/assets/css/common/resume.css
@@ -56,7 +56,7 @@
 
 .resume-contact i {
     width: 20px;
-    margin-right: 0.5rem;
+    margin-inline-end: 0.5rem;
     color: var(--primary);
 }
 
@@ -98,7 +98,8 @@
 }
 
 .resume-section-content ul {
-    margin: 0.5rem 0 1rem 1.5rem;
+    margin: 0.5rem 0 1rem 0;
+    margin-inline-start: 1.5rem;
     line-height: 1.6;
 }
 
@@ -152,7 +153,7 @@
 
 .resume-skills-list strong {
     color: var(--primary);
-    margin-right: 0.5rem;
+    margin-inline-end: 0.5rem;
 }
 
 /* Print Styles */
