--- a/themes/omid-dev/assets/css/common/footer.css
+++ b/themes/omid-dev/assets/css/common/footer.css
@@ -5,7 +5,7 @@
 }
 
 .footer {
-    max-width: calc(var(--main-width) + var(--gap) * 2);
+    max-width: calc(var(--main-width));
     margin: auto;
     padding: 40px var(--gap) 20px;
     text-align: center;
