small fixes for home

--- a/themes/omid-dev/assets/css/core/theme-vars.css
+++ b/themes/omid-dev/assets/css/core/theme-vars.css
@@ -12,6 +12,7 @@
     --primary: #0f172a;
     --secondary: #64748b;
     --tertiary: #cbd5e1;
+    --quaternary: #f1f5f9;
     --content: #334155;
     --code-block-bg: #1e293b;
     --code-bg: #f1f5f9;
@@ -32,6 +33,7 @@
     --primary: #f1f5f9;
     --secondary: #94a3b8;
     --tertiary: #475569;
+    --quaternary: #1e293b;
     --content: #cbd5e1;
     --code-block-bg: #1e293b;
     --code-bg: #1e293b;
